--- a/popup.html
+++ b/popup.html
@@ -32,6 +32,7 @@
   <body>
     <div id="status"></div>
     <img id="image-result" hidden>
+    <p>Navigate to any webpage :) </p>
+    <img width=100% src="http://network.expertisefinder.com/static/img/northwestern_239.jpeg">
   </body>
 </html>
-
